remove bold and fix comment wrapping with word-break

--- a/src/boards.scss
+++ b/src/boards.scss
@@ -24,7 +24,8 @@ html {
     background-color: $col_background;
     color: $col_foreground;
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-weight: normal;
+    font-size: medium;
 }
 
 a:link {
@@ -72,7 +73,7 @@ tr {
 }
 
 table {
-    width: 70%;
+    width: 75%;
     margin-left: auto;
     margin-right: auto;
 }
